--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,7 +298,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 60vh;
-  background: url("../img/coco/v3.JPG") center center;
+  background: url("../img/brain_bandeau.png") center center;
   background-size: cover;
   position: relative;
   margin-top: 70px;
